[gd_scene load_steps=9 format=3 uid="uid://cm56kd0ryjcvo"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_a7vni"]
[ext_resource type="FontFile" uid="uid://f0qkbfc5ff2c" path="res://DownloadAssets/Sprout Lands - UI Pack - Premium pack/fonts/pixelFont-7-8x14-sproutLands.ttf" id="2_oi8uf"]
[ext_resource type="AudioStream" uid="uid://b4shpuliu0eix" path="res://DownloadAssets/Inventory SFX Bundle/Button8.mp3" id="2_s1uu7"]
[ext_resource type="Texture2D" uid="uid://s2qv5yspwss0" path="res://DownloadAssets/Public Domain/blank-old-paper-page-illustration-lg.jpeg" id="2_wg7kw"]
[ext_resource type="StyleBox" uid="uid://0ulegkovjj5y" path="res://DownloadAssets/Sprout Lands - UI Pack - Premium pack/UI Sprites/buttons/square/small_square_pressed.tres" id="3_3nplb"]
[ext_resource type="AudioStream" uid="uid://chiu712tb7kby" path="res://DownloadAssets/Inventory SFX Bundle/Hover5.mp3" id="3_ganxf"]
[ext_resource type="StyleBox" uid="uid://m0neyuhloha4" path="res://DownloadAssets/Sprout Lands - UI Pack - Premium pack/UI Sprites/buttons/square/small_square_unpressed.tres" id="4_d72a1"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="4_jung2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a7vni")
metadata/_edit_vertical_guides_ = [544.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1154.0
offset_bottom = 653.0
texture = ExtResource("2_wg7kw")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -207.0
offset_right = 355.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.713726, 0.552941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_oi8uf")
theme_override_font_sizes/font_size = 100
text = "Savory Secrets"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -25.0
offset_right = -39.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.11015, 1.77069)
theme_override_constants/v_separation = 19

[node name="ContinueButton" type="Button" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("4_jung2")
theme_override_styles/focus = ExtResource("4_d72a1")
theme_override_styles/hover = ExtResource("4_d72a1")
theme_override_styles/pressed = ExtResource("3_3nplb")
theme_override_styles/normal = ExtResource("4_d72a1")
text = "Continue Run"

[node name="StartNewRunButton" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("4_jung2")
text = "Start New Run"

[node name="SettingsButton" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("4_jung2")
text = "Settings"

[node name="ButtonSelectedSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_s1uu7")
bus = &"SFX"

[node name="ButtonHoverSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ganxf")
volume_db = -10.0
pitch_scale = 0.5
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/GridContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/StartNewRunButton" to="." method="_on_start_new_run_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
